# gutenberger

./: .gitignore  Cargo.toml
client/: Cargo.toml  index.html  tailwind.config.js
client/src/: lib.rs  main.rs
client/src/components/home/: board.rs  card.rs  mod.rs  side_card.rs  sidebar.rs
client/src/utils/: constants.rs
client/src/views/: home.rs
client/styles/: input.css
model/: Cargo.toml
model/src/: book.rs  lib.rs  stop_words.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs  services.rs
