[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "postgres"] }
unicode-segmentation = "1.10.1"
