[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "postgres"] }
model = { path = "../model" }